本文を追加した

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>m-pri Blog</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>m-pri Blog</h1>
+        <p>美容師のアシスタントのm-priがプログラミングを勉強して、はじめて自分でブログを作りました。</p>
+        <p>HTMLとCSSの勉強を終え、今はJavaScriptの勉強をしています。</p>
     </body>
 </html>
