--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
         <h1>m-pri Blog</h1>
         <p>美容師のアシスタントのm-priがプログラミングを勉強して、はじめて自分でブログを作りました。</p>
         <p>HTMLとCSSの勉強を終え、今はJavaScriptの勉強をしています。</p>
+        <script>
+            const myName = 'm-pri'
+            console.log(`I am ${m-pri}`)
+        </script>
     </body>
 </html>
