--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <p>HTMLとCSSの勉強を終え、今はJavaScriptの勉強をしています。</p>
         <script>
             const myName = 'm-pri'
-            console.log(`I am ${m-pri}`)
+            console.log(`I am ${myName}`)
         </script>
     </body>
 </html>
