--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script>
             const myName = 'm-pri'
             console.log(`I am ${myName}`)
+            window.alert(`I am ${myName}`)
         </script>
     </body>
 </html>
