9月28日の感想を書いた

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <h1>m-pri Blog</h1>
         <p>美容師のアシスタントのm-priがプログラミングを勉強して、はじめて自分でブログを作りました。</p>
         <p>HTMLとCSSの勉強を終え、今はJavaScriptの勉強をしています。</p>
+        <h2>2020-09-28 JavaScript の変数を勉強した</h2>
+        <p>便利だなと思いました。</p>
         <script>
             const myName = 'm-pri'
             console.log(`I am ${myName}`)
